# web_2

./: pyproject.toml  requirements-dev.txt  setup.cfg
idea/: workspace.xml
middleware/: log_middleware.py
project/: db.sqlite3
project/books/: factories.py  models.py  serializers.py  urls.py  views.py
project/books/migrations/: 0001_initial.py
project/books/tests/: test_serializers.py
project/project/: settings.py  urls.py
