[project]
name = "django-3"
version = "0.1.0"
description = ""
authors = [
    {name = "AnnaVirasova2004",email = "132338156+AnnaVirasova2004@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

extras_require={
    'dev': [
        'flake8',
        'autopep8',
        'mypy',
    ],
}
